--- a/GloomeClasses/GloomeClasses/assets/game/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/game/lang/en.json
@@ -3,10 +3,12 @@
 	"characterclass-alchemist": "Alchemist",
 	"characterclass-artisan": "Artisan",
 	"characterclass-blackguard": "Blackguard",
+	"characterclass-chef": "Chef",
 
 	"characterdesc-alchemist": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here - EX from Working Classes: They discovered that the purification of the metals had led to a purification of themselves.</i></font><br><br>Alchemists are adept at hunting down herbs and forage, are very quick on their feet as well, and thanks to their smaller build usually they don't get hungry as fast. But at the same time they are unable to take as much of a hit in battle, and their weaker arm strength make using a bow more difficult.",
 	"characterdesc-artisan": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Artisans are masters of craft. Only they are able to craft works of art into their functional pottery and decorations, along with knowing how to get more out of each piece of clay when forming something. Thanks to their ability to stay more sedentary working on their craft, they can sustain on less food but if they have to head out to find clay, they still won't have trouble locating forage and food. But they have trouble harming animals, recieving less from harvesting them.",
 	"characterdesc-blackguard": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Blackguards are some of the strongest melee combattants. They can do more damage with melee weapons, and use armor more effectively for longer. On top of this, they are more healthy on average thanks to their training, and their strength lets them break rocks and ore faster and more efficiently. A Blackguard needs more food though to keep this up, and they are abysmal with bows. Being more accustom to the battlefield, they move with heavy steps that alert all animals around, and have trouble harvesting forage that's trampled.",
+	"characterdesc-chef": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>The Chef is the master of the kitchen, they don't need to eat as much and are expert butchers and foragers. They know the art of crafting metal cookware and to preserve meat for long times, as well as how to best seal something for long-term storage. But they can be a little clumsy in armor and damage it easier, as well as being a poor shot with the bow.",
 
 	"trait-temporaltransmutation": "<font color=\"#84ff84\">• Temporal Transmutation </font>",
 	"trait-scrounger": "<font color=\"#84ff84\">• Scrounger </font>",
@@ -26,6 +28,10 @@
 	//Nearsighted are in Vanilla Land
 	"trait-heavyfooted": "<font color=\"#ff8484\">• Heavy-Footed </font>",
 	//Heavyhanded is in Vanilla's Lang!
+	"trait-culinary": "<font color=\"#84ff84\">• Culinary </font>",
+	"trait-shelflifesavant": "<font color=\"#84ff84\">• Shelf-Life Savant </font>",
+	"trait-butcher": "<font color=\"#84ff84\">• Butcher </font>",
+	"trait-clumsy": "<font color=\"#ff8484\">• Clumsy </font>",
 
 	"traitname-temporaltransmutation": "Temporal Transmutation",
 	"traitname-scrounger": "Scrounger",
@@ -45,15 +51,24 @@
 	//Nearsighted are in Vanilla Land
 	"traitname-heavyfooted": "Heavy-Footed",
 	//Heavyhanded is in Vanilla's Lang!
+	"traitname-culinary": "Culinary",
+	"traitname-shelflifesavant": "Shelf-Life Savant",
+	"traitname-butcher": "Butcher",
+	"traitname-clumsy": "Clumsy",
 
 	"traitdesc-temporaltransmutation": "Add description for Trait when it's finished pls!",
 	"traitdesc-frugalforming": "Add description for Trait when it's finished pls!",
+	"traitdesc-artisan": "Add description for Trait when it's finished pls!",
+	"traitdesc-culinary": "Add description for Trait when it's finished pls!",
+	"traitdesc-shelflifesavant": "Add description for Trait when it's finished pls!",
 
 	"charattribute-wildCropDropRate-0.2": "+20% wild crop drop rate",
 	"charattribute-wildCropDropRate-0.25": "+25% wild crop drop rate",
 	"charattribute-forageDropRate-0.3": "+30% loot from foraging",
 	"charattribute-forageDropRate-0.5": "+50% loot from foraging",
+	"charattribute-animalLootDropRate-0.25": "+25% animal loot",
 	"charattribute-animalLootDropRate--0.25": "-25% animal loot",
+	"charattribute-animalHarvestingTime--0.5": "+50% animal harvesting speed",
 	"charattribute-animalHarvestingTime-0.1": "-10% animal harvesting speed",
 	"charattribute-animalSeekingRange-0.2": "+20% animal detection range",
 	"charattribute-oreDropRate-0.25": "+25% chance to get double ore",
@@ -70,6 +85,7 @@
 	"charattribute-rangedWeaponsSpeed-0.15": "-15% bow drawing speed",
 	"charattribute-rangedWeaponsSpeed-0.3": "-30% bow drawing speed",
 	"charattribute-armorDurabilityLoss--0.25": "+25% armor durability",
+	"charattribute-armorDurabilityLoss-0.25": "-25% armor durability",
 
 	"charattribute-clayformingPoints-10": "Define me after checking that this works!"
 
