I am so angry. For some reason there was a slew of just "Remove" settings baked into the project files. I've cleared them out now as well to actually get the Forlorn Knight working fully. Otherwise it was set to just flat out remove ALL item files on compile, run, anything. Why?

--- a/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
@@ -1,3 +1,4 @@
 {
-    "hello": "hello world!"
+	"item-forlorn-meteoriciron": "Meteoric Iron Estoc",
+	"item-forlornblade-meteoriciron": "Meteoric Iron Estoc blade",
 }
