--- a/GloomeClasses/GloomeClasses/assets/game/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/game/lang/en.json
@@ -5,12 +5,14 @@
 	//"characterclass-blackguard": "Blackguard",
 	"characterclass-chef": "Chef",
 	//"characterclass-clockmaker": "Clockmaker", //Going to run on the vanilla files if possible, but keep these here just in case. Probably can be removed when everything's finished and good to go!
+	"characterclass-forlornknight": "Forlorn Hope Knight",
 
 	"characterdesc-alchemist": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here - EX from Working Classes: They discovered that the purification of the metals had led to a purification of themselves.</i></font><br><br>Alchemists are adept at hunting down herbs and forage, are very quick on their feet as well, and thanks to their smaller build usually they don't get hungry as fast. But at the same time they are unable to take as much of a hit in battle, and their weaker arm strength make using a bow more difficult.",
 	"characterdesc-artisan": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Artisans are masters of craft. Only they are able to craft works of art into their functional pottery and decorations, along with knowing how to get more out of each piece of clay when forming something. Thanks to their ability to stay more sedentary working on their craft, they can sustain on less food but if they have to head out to find clay, they still won't have trouble locating forage and food. But they have trouble harming animals, recieving less from harvesting them.",
 	//"characterdesc-blackguard": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Blackguards are some of the strongest melee combattants. They can do more damage with melee weapons, and use armor more effectively for longer. On top of this, they are more healthy on average thanks to their training, and their strength lets them break rocks and ore faster and more efficiently. A Blackguard needs more food though to keep this up, and they are abysmal with bows. Being more accustom to the battlefield, they move with heavy steps that alert all animals around, and have trouble harvesting forage that's trampled.",
 	"characterdesc-chef": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>The Chef is the master of the kitchen, they don't need to eat as much and are expert butchers and foragers. They know the art of crafting metal cookware and to preserve meat for long times, as well as how to best seal something for long-term storage. But they can be a little clumsy in armor and damage it easier, as well as being a poor shot with the bow.",
 	//"characterdesc-clockmaker": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Clockmakers are the masters of the old technologies, the ones who see how things tick. They know their mechanics as a whole to be able to craft all sorts of wonders, along with being able to hack and convert a Locust to their side. They know where to hit to deal more damage against mechanicals and how to be more efficient repairing the broken forgotten machinery. Otherwise they don't know life outside of the township and it can be harsh on them to survive, and they have trouble combatting against the rust creatures given what they have seen.",
+	"characterdesc-forlornknight": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
 
 
 	"trait-temporaltransmutation": "<font color=\"#84ff84\">• Temporal Transmutation </font>",
@@ -40,6 +42,11 @@
 	"trait-technical": "<font color=\"#84ff84\">• Technical </font>",
 	"trait-stickyfingers": "<font color=\"#84ff84\">• Sticky Fingers </font>",
 	"trait-dread": "<font color=\"#ff8484\">• Dread </font>",
+	"trait-tenacious": "<font color=\"#84ff84\">• Tenacious </font>",
+	"trait-duelist": "<font color=\"#84ff84\">• Duelist </font>",
+	"trait-pragmatic": "<font color=\"#84ff84\">• Pragmatic </font>",
+	"trait-glutton": "<font color=\"#ff8484\">• Glutton </font>",
+	"trait-careless": "<font color=\"#ff8484\">• Careless </font>",
 
 	"traitname-temporaltransmutation": "Temporal Transmutation",
 	"traitname-scrounger": "Scrounger",
@@ -68,6 +75,11 @@
 	"traitname-technical": "Technical",
 	"traitname-stickyfingers": "Sticky Fingers",
 	"traitname-dread": "Dread",
+	"traitname-tenacious": "Tenacious",
+	"traitname-duelist": "Duelist",
+	"traitname-pragmatic": "Pragmatic",
+	"traitname-glutton": "Glutton",
+	"traitname-careless": "Careless",
 
 	"traitdesc-temporaltransmutation": "Add description for Trait when it's finished pls!",
 	"traitdesc-frugalforming": "Add description for Trait when it's finished pls!",
@@ -76,6 +88,7 @@
 	"traitdesc-shelflifesavant": "Add description for Trait when it's finished pls!",
 	"traitdesc-crafty": "Add description for Trait when it's finished pls!",
 	"traitdesc-locustlover": "Add description for Trait when it's finished pls!",
+	"traitdesc-tenacious": "Add description for Trait when it's finished pls!",
 
 	"charattribute-wildCropDropRate-0.2": "+20% wild crop drop rate",
 	"charattribute-wildCropDropRate-0.25": "+25% wild crop drop rate",
@@ -85,18 +98,23 @@
 	"charattribute-forageDropRate-0.3": "+30% loot from foraging",
 	"charattribute-forageDropRate-0.5": "+50% loot from foraging",
 	"charattribute-forageDropRate--0.15": "-15% loot from foraging",
+	"charattribute-animalLootDropRate-0.2": "+20% animal loot",
 	"charattribute-animalLootDropRate-0.25": "+25% animal loot",
 	"charattribute-animalLootDropRate--0.25": "-25% animal loot",
+	"charattribute-animalHarvestingTime--0.3": "+30% animal harvesting speed",
 	"charattribute-animalHarvestingTime--0.5": "+50% animal harvesting speed",
 	"charattribute-animalHarvestingTime-0.1": "-10% animal harvesting speed",
 	"charattribute-animalHarvestingTime-0.15": "-15% animal harvesting speed",
 	"charattribute-animalSeekingRange--0.25": "-25% animal detection range",
 	"charattribute-animalSeekingRange-0.2": "+20% animal detection range",
 	"charattribute-oreDropRate-0.25": "+25% chance to get double ore",
+	"charattribute-oreDropRate--0.25": "-25% ore drop rate",
 	"charattribute-miningSpeedMul-0.5": "+50% mining speed",
-	"charattribute-hungerrate--0.2": "-20% hunger rate",
+	"charattribute-hungerrate-0.2": "+20% hunger rate",
 	"charattribute-maxhealthExtraPoints-5": "+5 health points",
 	"charattribute-maxhealthExtraPoints--5": "-5 health points",
+	"charattribute-armorWalkSpeedAffectedness--0.15": "walk speed penalty for wearing armor reduced by 15%",
+	"charattribute-meleeWeaponsDamage-0.4": "+40% melee damage",
 	"charattribute-rangedWeaponsDamage--0.2": "-20% ranged damage",
 	"charattribute-rangedWeaponsDamage--0.35": "-35% ranged damage",
 	"charattribute-bowDrawingStrength--0.2": "-20% ranged projectile velocity",
