--- a/GloomeClasses/GloomeClasses/assets/game/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/game/lang/en.json
@@ -7,6 +7,7 @@
 	//"characterclass-clockmaker": "Clockmaker", //Going to run on the vanilla files if possible, but keep these here just in case. Probably can be removed when everything's finished and good to go!
 	"characterclass-forlornknight": "Forlorn Hope Knight",
 	"characterclass-homesteader": "Homesteader",
+	"characterclass-lumberjack": "Lumberjack",
 
 	"characterdesc-alchemist": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here - EX from Working Classes: They discovered that the purification of the metals had led to a purification of themselves.</i></font><br><br>Alchemists are adept at hunting down herbs and forage, are very quick on their feet as well, and thanks to their smaller build usually they don't get hungry as fast. But at the same time they are unable to take as much of a hit in battle, and their weaker arm strength make using a bow more difficult.",
 	"characterdesc-artisan": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Artisans are masters of craft. Only they are able to craft works of art into their functional pottery and decorations, along with knowing how to get more out of each piece of clay when forming something. Thanks to their ability to stay more sedentary working on their craft, they can sustain on less food but if they have to head out to find clay, they still won't have trouble locating forage and food. But they have trouble harming animals, recieving less from harvesting them.",
@@ -15,6 +16,7 @@
 	//"characterdesc-clockmaker": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Clockmakers are the masters of the old technologies, the ones who see how things tick. They know their mechanics as a whole to be able to craft all sorts of wonders, along with being able to hack and convert a Locust to their side. They know where to hit to deal more damage against mechanicals and how to be more efficient repairing the broken forgotten machinery. Otherwise they don't know life outside of the township and it can be harsh on them to survive, and they have trouble combatting against the rust creatures given what they have seen.",
 	"characterdesc-forlornknight": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
 	"characterdesc-homesteader": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
+	"characterdesc-lumberjack": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
 
 
 	"trait-temporaltransmutation": "<font color=\"#84ff84\">• Temporal Transmutation </font>",
@@ -58,6 +60,10 @@
 	"trait-sneaky": "<font color=\"#84ff84\">• Sneaky </font>",
 	//Resourceful
 	//Farsighted are defined in Vanilla's Lang
+	"trait-carpenter": "<font color=\"#84ff84\">• Carpenter </font>",
+	"trait-forester": "<font color=\"#84ff84\">• Forester </font>",
+	"trait-rugged": "<font color=\"#84ff84\">• Rugged </font>",
+	"trait-defender": "<font color=\"#84ff84\">• Defender </font>",
 
 	"traitname-temporaltransmutation": "Temporal Transmutation",
 	"traitname-scrounger": "Scrounger",
@@ -100,6 +106,10 @@
 	"traitname-sneaky": "Sneaky",
 	//Resourceful
 	//Farsighted are defined in Vanilla's Lang
+	"traitname-carpenter": "Carpenter",
+	"traitname-forester": "Forester",
+	"traitname-rugged": "Rugged",
+	"traitname-defender": "Defender",
 
 	"traitdesc-temporaltransmutation": "Add description for Trait when it's finished pls!",
 	"traitdesc-frugalforming": "Add description for Trait when it's finished pls!",
@@ -111,7 +121,12 @@
 	"traitdesc-tenacious": "Add description for Trait when it's finished pls!",
 	"traitdesc-pioneer": "Add description for Trait when it's finished pls!",
 	"traitdesc-claustrophobic": "Add description for Trait when it's finished pls!",
+	"traitdesc-carpenter": "Add description for Trait when it's finished pls!",
 
+	"charattribute-logDropRate-0.15": "+15% chance for extra log",
+	"charattribute-saplingDropRate-3": "Triple sapling drop rate",
+	"charattribute-stickDropRate-0.5": "+50% chance to get double sticks from branches",
+	"charattribute-fruitTreeSurvival-2": "Doubled chance for fruit trees to root",
 	"charattribute-cropDropRate-0.3": "+30% extra crops on harvest",
 	"charattribute-wildCropDropRate-0.2": "+20% wild crop drop rate",
 	"charattribute-wildCropDropRate-0.25": "+25% wild crop drop rate",
@@ -137,10 +152,14 @@
 	"charattribute-oreDropRate--0.25": "-25% ore drop rate",
 	"charattribute-miningSpeedMul-0.5": "+50% mining speed",
 	"charattribute-miningSpeedMul--0.25": "-25% mining speed",
+	"charattribute-hungerrate--0.2": "-20% hunger rate",
 	"charattribute-hungerrate-0.2": "+20% hunger rate",
+	"charattribute-maxhealthExtraPoints-2": "+2 health points",
 	"charattribute-maxhealthExtraPoints-5": "+5 health points",
 	"charattribute-maxhealthExtraPoints--5": "-5 health points",
 	"charattribute-armorWalkSpeedAffectedness--0.15": "walk speed penalty for wearing armor reduced by 15%",
+	"charattribute-armorWalkSpeedAffectedness--0.2": "walk speed penalty for wearing armor reduced by 20%",
+	"charattribute-meleeWeaponsDamage-0.1": "+10% melee damage",
 	"charattribute-meleeWeaponsDamage-0.4": "+40% melee damage",
 	"charattribute-meleeWeaponsDamage--0.2": "-20% melee damage",
 	"charattribute-rangedWeaponsDamage-0.7": "+70% ranged damage",
@@ -154,6 +173,7 @@
 	"charattribute-rangedWeaponsSpeed--0.25": "+25% bow drawing speed",
 	"charattribute-rangedWeaponsSpeed-0.15": "-15% bow drawing speed",
 	"charattribute-rangedWeaponsSpeed-0.3": "-30% bow drawing speed",
+	"charattribute-armorDurabilityLoss--0.2": "+20% armor durability",
 	"charattribute-armorDurabilityLoss--0.25": "+25% armor durability",
 	"charattribute-armorDurabilityLoss-0.25": "-25% armor durability",
 	"charattribute-mechanicalsDamage-0.25": "+25% damage against mechanicals",
@@ -162,6 +182,6 @@
 	"charattribute-vesselContentsDropRate-0.35": "Vessels drop +35% more",
 
 	"charattribute-clayformingPoints-10": "Define me after checking that this works!",
-	"charattribute-caveStabilityLoss--0.25": "Define me after checking that this works!"
+	"charattribute-caveStabilityLoss--0.15": "Define me after checking that this works!"
 
 }
