Mason is good to go

--- a/GloomeClasses/GloomeClasses/assets/game/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/game/lang/en.json
@@ -2,12 +2,11 @@
 
 	"characterclass-alchemist": "Alchemist",
 	"characterclass-artisan": "Artisan",
-	//"characterclass-blackguard": "Blackguard",
 	"characterclass-chef": "Chef",
-	//"characterclass-clockmaker": "Clockmaker", //Going to run on the vanilla files if possible, but keep these here just in case. Probably can be removed when everything's finished and good to go!
 	"characterclass-forlornknight": "Forlorn Hope Knight",
 	"characterclass-homesteader": "Homesteader",
 	"characterclass-lumberjack": "Lumberjack",
+	"characterclass-mason": "Mason",
 
 	"characterdesc-alchemist": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here - EX from Working Classes: They discovered that the purification of the metals had led to a purification of themselves.</i></font><br><br>Alchemists are adept at hunting down herbs and forage, are very quick on their feet as well, and thanks to their smaller build usually they don't get hungry as fast. But at the same time they are unable to take as much of a hit in battle, and their weaker arm strength make using a bow more difficult.",
 	"characterdesc-artisan": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Artisans are masters of craft. Only they are able to craft works of art into their functional pottery and decorations, along with knowing how to get more out of each piece of clay when forming something. Thanks to their ability to stay more sedentary working on their craft, they can sustain on less food but if they have to head out to find clay, they still won't have trouble locating forage and food. But they have trouble harming animals, recieving less from harvesting them.",
@@ -16,7 +15,9 @@
 	//"characterdesc-clockmaker": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Clockmakers are the masters of the old technologies, the ones who see how things tick. They know their mechanics as a whole to be able to craft all sorts of wonders, along with being able to hack and convert a Locust to their side. They know where to hit to deal more damage against mechanicals and how to be more efficient repairing the broken forgotten machinery. Otherwise they don't know life outside of the township and it can be harsh on them to survive, and they have trouble combatting against the rust creatures given what they have seen.",
 	"characterdesc-forlornknight": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
 	"characterdesc-homesteader": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
+	//"characterdesc-hunter": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
 	"characterdesc-lumberjack": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
+	"characterdesc-mason": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
 
 
 	"trait-temporaltransmutation": "<font color=\"#84ff84\">• Temporal Transmutation </font>",
@@ -64,6 +65,7 @@
 	"trait-forester": "<font color=\"#84ff84\">• Forester </font>",
 	"trait-rugged": "<font color=\"#84ff84\">• Rugged </font>",
 	"trait-defender": "<font color=\"#84ff84\">• Defender </font>",
+	"trait-mason": "<font color=\"#84ff84\">• Mason </font>",
 
 	"traitname-temporaltransmutation": "Temporal Transmutation",
 	"traitname-scrounger": "Scrounger",
@@ -110,6 +112,7 @@
 	"traitname-forester": "Forester",
 	"traitname-rugged": "Rugged",
 	"traitname-defender": "Defender",
+	"traitname-mason": "Mason",
 
 	"traitdesc-temporaltransmutation": "Add description for Trait when it's finished pls!",
 	"traitdesc-frugalforming": "Add description for Trait when it's finished pls!",
@@ -122,6 +125,7 @@
 	"traitdesc-pioneer": "Add description for Trait when it's finished pls!",
 	"traitdesc-claustrophobic": "Add description for Trait when it's finished pls!",
 	"traitdesc-carpenter": "Add description for Trait when it's finished pls!",
+	"traitdesc-mason": "Add description for Trait when it's finished pls!",
 
 	"charattribute-logDropRate-0.15": "+15% chance for extra log",
 	"charattribute-saplingDropRate-3": "Triple sapling drop rate",
