Mystic is good to go.

--- a/GloomeClasses/GloomeClasses/assets/game/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/game/lang/en.json
@@ -8,6 +8,8 @@
 	"characterclass-lumberjack": "Lumberjack",
 	"characterclass-mason": "Mason",
 	"characterclass-merchant": "Merchant",
+	"characterclass-miner": "Miner",
+	"characterclass-mystic": "Mystic",
 
 	"characterdesc-alchemist": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here - EX from Working Classes: They discovered that the purification of the metals had led to a purification of themselves.</i></font><br><br>Alchemists are adept at hunting down herbs and forage, are very quick on their feet as well, and thanks to their smaller build usually they don't get hungry as fast. But at the same time they are unable to take as much of a hit in battle, and their weaker arm strength make using a bow more difficult.",
 	"characterdesc-artisan": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Artisans are masters of craft. Only they are able to craft works of art into their functional pottery and decorations, along with knowing how to get more out of each piece of clay when forming something. Thanks to their ability to stay more sedentary working on their craft, they can sustain on less food but if they have to head out to find clay, they still won't have trouble locating forage and food. But they have trouble harming animals, recieving less from harvesting them.",
@@ -20,6 +22,8 @@
 	"characterdesc-lumberjack": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
 	"characterdesc-mason": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
 	"characterdesc-merchant": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
+	"characterdesc-miner": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
+	"characterdesc-mystic": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
 
 
 	"trait-temporaltransmutation": "<font color=\"#84ff84\">• Temporal Transmutation </font>",
@@ -71,6 +75,17 @@
 	"trait-packmule": "<font color=\"#84ff84\">• Pack Mule </font>",
 	"trait-specialstock": "<font color=\"#84ff84\">• Special Stock </font>",
 	"trait-silvertongue": "<font color=\"#84ff84\">• Silver Tongue </font>",
+	"trait-prospector": "<font color=\"#84ff84\">• Prospector </font>",
+	"trait-shelteredstone": "<font color=\"#84ff84\">• Sheltered By Stone </font>",
+	"trait-toolkeeper": "<font color=\"#84ff84\">• Toolkeeper </font>",
+	"trait-prospectorpack": "<font color=\"#84ff84\">• Prospector Pack </font>",
+	"trait-agoraphobia": "<font color=\"#ff8484\">• Agoraphobia </font>",
+	"trait-miner": "<font color=\"#84ff84\">• Miner </font>",
+	"trait-mystic": "<font color=\"#84ff84\">• Mystic </font>",
+	"trait-clairvoyance": "<font color=\"#84ff84\">• Clairvoyance </font>",
+	"trait-shrewd": "<font color=\"#84ff84\">• Shrewd </font>",
+	"trait-dreadslayer": "<font color=\"#84ff84\">• Dreadslayer </font>",
+	"trait-clockworkadverse": "<font color=\"#ff8484\">• Clockwork Adverse </font>",
 
 	"traitname-temporaltransmutation": "Temporal Transmutation",
 	"traitname-scrounger": "Scrounger",
@@ -121,6 +136,17 @@
 	"traitname-packmule": "Pack Mule",
 	"traitname-specialstock": "Special Stock",
 	"traitname-silvertongue": "Silver Tongue",
+	"traitname-prospector": "Prospector",
+	"traitname-shelteredstone": "Sheltered By Stone",
+	"traitname-toolkeeper": "Toolkeeper",
+	"traitname-prospectorpack": "Prospector Pack",
+	"traitname-agoraphobia": "Agoraphobia",
+	"traitname-miner": "Miner",
+	"traitname-mystic": "Mystic",
+	"traitname-clairvoyance": "Clairvoyance",
+	"traitname-shrewd": "Shrewd",
+	"traitname-dreadslayer": "Dreadslayer",
+	"traitname-clockworkadverse": "Clockwork Adverse",
 
 	"traitdesc-temporaltransmutation": "Add description for Trait when it's finished pls!",
 	"traitdesc-frugalforming": "Add description for Trait when it's finished pls!",
@@ -137,6 +163,13 @@
 	"traitdesc-packmule": "Add description for Trait when it's finished pls!",
 	"traitdesc-specialstock": "Add description for Trait when it's finished pls!",
 	"traitdesc-silvertongue": "Add description for Trait when it's finished pls!",
+	"traitdesc-prospector": "Add description for Trait when it's finished pls!",
+	"traitdesc-shelteredstone": "Add description for Trait when it's finished pls!",
+	"traitdesc-toolkeeper": "Add description for Trait when it's finished pls!",
+	"traitdesc-prospectorpack": "Add description for Trait when it's finished pls!",
+	"traitdesc-agoraphobia": "Add description for Trait when it's finished pls!",
+	"traitdesc-mystic": "Add description for Trait when it's finished pls!",
+	"traitdesc-clairvoyance": "Add description for Trait when it's finished pls!",
 
 	"charattribute-logDropRate-0.15": "+15% chance for extra log",
 	"charattribute-saplingDropRate-3": "Triple sapling drop rate",
@@ -161,10 +194,13 @@
 	"charattribute-animalHarvestingTime-0.1": "-10% animal harvesting speed",
 	"charattribute-animalHarvestingTime-0.15": "-15% animal harvesting speed",
 	"charattribute-animalSeekingRange--0.25": "-25% animal detection range",
+	"charattribute-animalSeekingRange--0.3": "-30% animal detection range",
 	"charattribute-animalSeekingRange--0.6": "-60% animal detection range",
 	"charattribute-animalSeekingRange-0.2": "+20% animal detection range",
 	"charattribute-oreDropRate-0.25": "+25% chance to get double ore",
+	"charattribute-oreDropRate-0.5": "+50% chance to get double ore",
 	"charattribute-oreDropRate--0.25": "-25% ore drop rate",
+	"charattribute-miningSpeedMul-1": "Doubled mining speed",
 	"charattribute-miningSpeedMul-0.5": "+50% mining speed",
 	"charattribute-miningSpeedMul--0.25": "-25% mining speed",
 	"charattribute-hungerrate--0.2": "-20% hunger rate",
@@ -172,6 +208,7 @@
 	"charattribute-maxhealthExtraPoints-2": "+2 health points",
 	"charattribute-maxhealthExtraPoints-5": "+5 health points",
 	"charattribute-maxhealthExtraPoints--5": "-5 health points",
+	"charattribute-walkspeed-0.15": "+15% walk speed",
 	"charattribute-armorWalkSpeedAffectedness--0.15": "walk speed penalty for wearing armor reduced by 15%",
 	"charattribute-armorWalkSpeedAffectedness--0.2": "walk speed penalty for wearing armor reduced by 20%",
 	"charattribute-meleeWeaponsDamage-0.1": "+10% melee damage",
@@ -192,11 +229,14 @@
 	"charattribute-armorDurabilityLoss--0.25": "+25% armor durability",
 	"charattribute-armorDurabilityLoss-0.25": "-25% armor durability",
 	"charattribute-mechanicalsDamage-0.25": "+25% damage against mechanicals",
+	"charattribute-mechanicalsDamage--0.25": "-25% damage against mechanicals",
+	"charattribute-rustedDamage-0.25": "+25% damage against rusted creatures",
 	"charattribute-rustedDamage--0.1": "-10% damage against rusted creatures",
 	"charattribute-rustyGearDropRate-1": "+100% rusty gear drop rate",
 	"charattribute-vesselContentsDropRate-0.35": "Vessels drop +35% more",
 
 	"charattribute-clayformingPoints-10": "Define me after checking that this works!",
-	"charattribute-caveStabilityLoss--0.15": "Define me after checking that this works!"
-
+	"charattribute-caveStabilityLoss--0.15": "Define me after checking that this works!",
+	"charattribute-caveStabilityLoss--1": "Define me after checking that this works!",
+	"charattribute-surfaceStabilityLoss--0.25": "Define me after checking that this works!"
 }
