--- a/GloomeClasses/GloomeClasses/assets/game/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/game/lang/en.json
@@ -10,6 +10,7 @@
 	"characterclass-merchant": "Merchant",
 	"characterclass-miner": "Miner",
 	"characterclass-mystic": "Mystic",
+	"characterclass-smith": "Smith",
 
 	"characterdesc-alchemist": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here - EX from Working Classes: They discovered that the purification of the metals had led to a purification of themselves.</i></font><br><br>Alchemists are adept at hunting down herbs and forage, are very quick on their feet as well, and thanks to their smaller build usually they don't get hungry as fast. But at the same time they are unable to take as much of a hit in battle, and their weaker arm strength make using a bow more difficult.",
 	"characterdesc-artisan": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Artisans are masters of craft. Only they are able to craft works of art into their functional pottery and decorations, along with knowing how to get more out of each piece of clay when forming something. Thanks to their ability to stay more sedentary working on their craft, they can sustain on less food but if they have to head out to find clay, they still won't have trouble locating forage and food. But they have trouble harming animals, recieving less from harvesting them.",
@@ -24,7 +25,8 @@
 	"characterdesc-merchant": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
 	"characterdesc-miner": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
 	"characterdesc-mystic": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
-
+	"characterdesc-smith": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
+	//"characterdesc-tailor": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
 
 	"trait-temporaltransmutation": "<font color=\"#84ff84\">• Temporal Transmutation </font>",
 	"trait-scrounger": "<font color=\"#84ff84\">• Scrounger </font>",
@@ -86,6 +88,10 @@
 	"trait-shrewd": "<font color=\"#84ff84\">• Shrewd </font>",
 	"trait-dreadslayer": "<font color=\"#84ff84\">• Dreadslayer </font>",
 	"trait-clockworkadverse": "<font color=\"#ff8484\">• Clockwork Adverse </font>",
+	"trait-smith": "<font color=\"#84ff84\">• Smith </font>",
+	"trait-dragonskin": "<font color=\"#84ff84\">• Dragonskin </font>",
+	"trait-recycler": "<font color=\"#84ff84\">• Recycler </font>",
+	"trait-burner": "<font color=\"#84ff84\">• Burner </font>",
 
 	"traitname-temporaltransmutation": "Temporal Transmutation",
 	"traitname-scrounger": "Scrounger",
@@ -147,6 +153,10 @@
 	"traitname-shrewd": "Shrewd",
 	"traitname-dreadslayer": "Dreadslayer",
 	"traitname-clockworkadverse": "Clockwork Adverse",
+	"traitname-smith": "Smith",
+	"traitname-dragonskin": "Dragonskin",
+	"traitname-recycler": "Recycler",
+	"traitname-burner": "Burner",
 
 	"traitdesc-temporaltransmutation": "Add description for Trait when it's finished pls!",
 	"traitdesc-frugalforming": "Add description for Trait when it's finished pls!",
@@ -170,7 +180,11 @@
 	"traitdesc-agoraphobia": "Add description for Trait when it's finished pls!",
 	"traitdesc-mystic": "Add description for Trait when it's finished pls!",
 	"traitdesc-clairvoyance": "Add description for Trait when it's finished pls!",
+	"traitdesc-smith": "Add description for Trait when it's finished pls!",
+	"traitdesc-dragonskin": "Add description for Trait when it's finished pls!",
+	"traitdesc-recycler": "Add description for Trait when it's finished pls!",
 
+	"charattribute-charcoalDropRate-0.35": "+35% increased charcoal production",
 	"charattribute-logDropRate-0.15": "+15% chance for extra log",
 	"charattribute-saplingDropRate-3": "Triple sapling drop rate",
 	"charattribute-stickDropRate-0.5": "+50% chance to get double sticks from branches",
@@ -232,6 +246,7 @@
 	"charattribute-mechanicalsDamage--0.25": "-25% damage against mechanicals",
 	"charattribute-rustedDamage-0.25": "+25% damage against rusted creatures",
 	"charattribute-rustedDamage--0.1": "-10% damage against rusted creatures",
+	"charattribute-fireDamage--0.5": "-50% damage from fire",
 	"charattribute-rustyGearDropRate-1": "+100% rusty gear drop rate",
 	"charattribute-vesselContentsDropRate-0.35": "Vessels drop +35% more",
 
