Everything appears to be working for the most part. Cleaned up a lot of just, uneeded code as well. Most traits are working, but the specific class unique ones like recipes or more advanced behaviors are not yet. Also need to get the Fruit Tree Root Chance Lumberjack trait working, as well as the Claustraphobic/Agoraphobic/ShelteredByStone reviewed and working. It's... very strict and weirdly done. It might work, but it's not configurable in the least and the 'values' for the stat is nothing more then a flag setting for how to handle it. I... think it needs to be rewritten since that is not flexible in the least. Split Claust and Agora into two separate checks, they look for two different things. Claustraphobia and Sheltered By Stone might be able to be in the same check, they both look for "underground" and perhaps the best way to check for that is to see if Sunlight can effect the player? Similar to cave sounds. Agoraphobia needs to check for if the player is in a room or not and apply then. All other 'Basic' Traits apart from the ones mentioned here work. Specialized Traits have entries made and spaces for the Lang to be set up later.

--- a/GloomeClasses/GloomeClasses/assets/game/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/game/lang/en.json
@@ -21,6 +21,7 @@
 	"characterdesc-homesteader": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
 	//"characterdesc-hunter": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
 	"characterdesc-lumberjack": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
+	//"characterdesc-malefactor": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
 	"characterdesc-mason": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
 	"characterdesc-merchant": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
 	"characterdesc-miner": "<font color=\"#99c9f9\"><i>Add Class's RP Flair Here</i></font><br><br>Add Class overview here!",
@@ -264,7 +265,7 @@
 	"charattribute-rustyGearDropRate-1": "+100% rusty gear drop rate",
 	"charattribute-vesselContentsDropRate-0.35": "Vessels drop +35% more",
 
-	"charattribute-clayformingPoints-10": "Define me after checking that this works!",
+	"charattribute-clayformingPoints-5": "+5 voxels for each piece of clay used in clayforming",
 	"charattribute-caveStabilityLoss--0.15": "Define me after checking that this works!",
 	"charattribute-caveStabilityLoss--1": "Define me after checking that this works!",
 	"charattribute-surfaceStabilityLoss--0.25": "Define me after checking that this works!"
