--- a/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/gloomeclasses/lang/en.json
@@ -1,4 +1,21 @@
 {
 	"item-forlorn-meteoriciron": "Meteoric Iron Estoc",
 	"item-forlornblade-meteoriciron": "Meteoric Iron Estoc blade",
+	"item-tools-basic": "Basic armor kit",
+	"itemdesc-tools-basic": "<font color=\"#ff0000\">Too weak to repair plate armors</font>",
+	"item-tools-simple": "Simple armor kit",
+	"item-tools-standard": "Standard armor kit",
+	"item-tools-advanced": "Advanced armor kit",
+	"item-basicbooster": "Basic soil booster",
+	"itemdesc-basicbooster": "Permanently increases all max soil nutrient values by 20%",
+	"item-qualitybooster": "Quality soil booster",
+	"itemdesc-qualitybooster": "Permanently increases all max soil nutrient values by 40%",
+	"item-clothes-head-farm-hat": "Farm hat",
+	"item-clothes-upperbody-lumberjack-shirt": "Lumberjack shirt",
+	"block-metalpan-copper": "Copper pan",
+	"block-metalmininglantern-*": "Mining lantern",
+	"block-primitivemininglantern-*": "Simple mining lantern",
+	"block-coppercookingpot-burned": "Copper Cooking Pot",
+	"block-copperfryingpan-burned": "Copper Frying Pan",
+	"blockdesc-metalpan-copper": "A proper prospectors pan, can find minerals and has a increased chance to find nuggets"
 }
